--- a/chefbot/chefbot_bringup/param/costmap_common_params.yaml
+++ b/chefbot/chefbot_bringup/param/costmap_common_params.yaml
@@ -4,8 +4,8 @@ obstacle_range: 2.5
 raytrace_range: 3.0
 
 # Obstacle Cost Shaping (http://wiki.ros.org/costmap_2d/hydro/inflation)
-#robot_radius: 0.20  # distance a circular robot should be clear of the obstacle (kobuki: 0.18)
-robot_radius: 0.4509 # ArloBot
+robot_radius: 0.20  # distance a circular robot should be clear of the obstacle (kobuki: 0.18)
+#robot_radius: 0.4509 # ArloBot
 # footprint: [[x0, y0], [x1, y1], ... [xn, yn]]  # if the robot is not circular
 inflation_radius: 0.50  # max. distance from an obstacle at which costs are incurred for planning paths.
 cost_scaling_factor: 5  # exponential rate at which the obstacle cost drops off (default: 10)
